--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
     "semi": false
   },
   "dependencies": {
+    "better-auth": "^1.2.3",
+    "drizzle-orm": "^0.40.0",
     "next": "15.2.1",
+    "postgres": "^3.4.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
@@ -43,6 +46,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "drizzle-kit": "^0.30.5",
     "eslint": "^9",
     "eslint-config-next": "15.2.1",
     "lint-staged": "^15.4.3",
