chore: tweaks to README.md package.json auth.json registry.json ~ 4 files 47+ 46-
README.md
package.json
public/r/app/api/auth.json
public/r/registry.json

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "next dev --turbopack",
     "lint": "next lint",
     "prepare": "if [ -z \"$VERCEL_ENV\" ]; then simple-git-hooks; fi",
+    "registry": "npx smart-registry@latest 'src/app/api/auth/[...all]/route.ts'",
     "start": "next start"
   },
   "simple-git-hooks": {
