--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "embla-carousel-react": "^8.5.2",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.479.0",
-    "next": "15.2.1",
+    "next": "^15.2.1",
     "next-themes": "^0.4.4",
     "postgres": "^3.4.5",
     "react": "^19.0.0",
