--- a/public/r/app-api-auth.json
+++ b/public/r/app-api-auth.json
@@ -1,6 +1,6 @@
 {
   "$schema": "https://ui.shadcn.com/schema/registry-item.json",
-  "name": "app/api/auth",
+  "name": "app-api-auth",
   "type": "registry:file",
   "dependencies": [
     "better-auth",
